Fix: set z-index of burgerButton above menu panel

--- a/css/utils.css
+++ b/css/utils.css
@@ -59,7 +59,7 @@ body {
     border-radius: 0;
     width: 100%;
     height: 100vh;
-    z-index: 1000;
+    z-index: 10;
   }
   
   .navbar ul {
@@ -78,6 +78,6 @@ body {
     position: absolute;
     right: 10px;
     top: 10px;
-    z-index: 1;
+    z-index: 11;
   }
 }
